Fix qcontainer alignment to be in the center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
 /* Body style and color */
 
 body {
-    max-width: 75%;
     font-family: whisper, sans-serif, 'shadows into light';
     background-color: #EBEEFF;
     color: blueviolet;
